--- a/src/css/Div.module.css
+++ b/src/css/Div.module.css
@@ -28,3 +28,19 @@
     background-color: white;
     display: flex, grid;
 }
+
+.detailcontentsdiv{
+    min-width: 80vw;
+    min-height: 60vh;
+    flex-direction: row;
+    margin-right: auto;
+    margin-left: auto;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    padding-top: 0;
+    padding-bottom: 2rem;
+    display: flex, grid;  /*격자모양 디스플레이*/
+    grid-template-columns: 1fr 1fr 1fr; /*가로축 4칸제한. 비율은 1:1:1:1*/
+    box-sizing: border-box;
+    background-color: gray;
+}
