--- a/src/css/Div.module.css
+++ b/src/css/Div.module.css
@@ -14,7 +14,7 @@
     background-color: purple;
 }
 
-.menusdiv {
+.menusdiv { /*메뉴 바 div*/
     width: 100vw;
     height: 5vh;
     border: 5px black solid;
@@ -42,10 +42,10 @@
     display: flex, grid;  /*격자모양 디스플레이*/
     grid-template-columns: 1fr 1fr 1fr; /*가로축 4칸제한. 비율은 1:1:1:1*/
     box-sizing: border-box;
-    background-color: darkgrey;
+    background-color: rgb(187, 4, 187);
 }
 
-.addcontentsdiv{
+.addcontentsdiv{ /*등록화면 div*/
     min-width: 80vw;
     min-height: 60vh;
     flex-direction: row;
